--- a/Apex.htm
+++ b/Apex.htm
@@ -90,7 +90,7 @@
 	</head>
 	<body>
 		<div class="enlaces">
-			<h1>Enlaces de interés</h1>
+			<h1>Enlaces de interÃ©s</h1>
 			<a class="inicio" href="file:///C:/Users/alumno/Desktop/Apex.htm">Inicio</a><br><br>
 			<a href="file:///C:/Users/alumno/Desktop/Pase.htm">Pase de Batalla</a><br><br>
 			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">Competitivo</a><br><br>
