--- a/Apex.htm
+++ b/Apex.htm
@@ -91,8 +91,8 @@
 	<body>
 		<div class="enlaces">
 			<h1>Enlaces de interés</h1>
-			<a class="inicio" href="file:///C:/Users/alumno/Desktop/Apex.htm">Inicio</a><br><br>
-			<a href="file:///C:/Users/alumno/Desktop/Pase.htm">Pase de Batalla</a><br><br>
+			<a class="inicio" href="Apex.htm">Inicio</a><br><br>
+			<a href="Pase.htm">Pase de Batalla</a><br><br>
 			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">Competitivo</a><br><br>
 			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">Items jugables</a><br><br>
 			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">Eventos</a><br><br>
