--- a/Pase.htm
+++ b/Pase.htm
@@ -159,14 +159,14 @@
 	<body>
 		<div class="enlaces">
 			<h1 id="inicio">Enlaces</h1>
-			<a href="file:///C:/Users/alumno/Desktop/Apex.htm">Inicio</a><br><br>
-			<a class="pase" href="file:///C:/Users/alumno/Desktop/Pase.htm">Pase de Batalla</a><br><br>
+			<a href="Apex.htm">Inicio</a><br><br>
+			<a class="pase" href="Pase.htm">Pase de Batalla</a><br><br>
 			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">Competitivo</a><br><br>
 			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">Items jugables</a><br><br>
 			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">Eventos</a><br><br>
 		</div>
 		<div class="comocomprar">
-			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">Cómo comprarlo</a>
+			<a href="file:///C:/Users/USUARIO/Desktop/no%20disponible%20actualmente.htm">CÃ³mo comprarlo</a>
 		</div>
 		<div class="tienda">
 			<h1>Tienda</h1>
